<resources>
    <string name="app_name">MrWorldwide</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">234262307308413</string>
    <string name="fb_login_protocol_scheme">fb234262307308413</string>
    <string name="title_activity_login">Sign in</string>
    <string name="back_url">http://10.0.2.2:3000</string>

    <!-- Strings related to add trip  -->
    <string name="trip_title_label">Nombre del viaje:</string>
    <string name="trip_title_hint">Mi viaje a NYC</string>
    <string name="start_date_label">Fecha de inicio</string>
    <string name="finish_date_label">Fecha de finalización</string>
    <string name="finish_date_hint">25/08/2018</string>
    <string name="start_date_hint">07/08/2018</string>
    <string name="create_edit_title">Crear/Modificar Viaje</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="bitacora">Bitácora</string>
    <string name="agregar">Agregar</string>
    <string name="mapa">Mapa</string>
    <string name="viajeros">Viajeros</string>
    <string name="title_placeholder">Título</string>
    <string name="text_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="viajes">Viajes</string>
    <string name="date_placeholder">31 de Febrero de 2014</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bitacora_edit">Editar</string>
    <string name="bitacora_delete">Eliminar</string>
    <string name="bitacora_share">Compartir</string>
    <string name="like_text">Like</string>
    <string name="share_traveler_text">Compartir</string>
    <string name="eventDescriptionPlaceholder">¿Qué evento querés compartir?</string>
    <string name="dateInput">Fecha:</string>
    <string name="cancelButton">Cancelar</string>
    <string name="acceptButton">Aceptar</string>
    <string name="name">Nombre</string>
    <string name="email">Email</string>
    <string name="save">Guardar</string>
    <string name="starting_date">Fecha de inicio:</string>
    <string name="end_date">Fecha de finalización:</string>
    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="user_id_placeholder">user id placeholder</string>
</resources>
