<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_bitacora"
        android:enabled="true"
        android:icon="@drawable/icon_aventuras"
        android:title="@string/bitacora"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_trips"
        android:enabled="true"
        android:icon="@drawable/icon_bag"
        android:title="@string/viajes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/icon_marcador_mapa"
        android:title="@string/mapa"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_travelers"
        android:enabled="true"
        android:icon="@drawable/icon_grupo_usuarios"
        android:title="@string/viajeros"
        app:showAsAction="ifRoom" />
</menu>