<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_placeholder"
            android:textColor="@color/primaryTextDark"
            android:textSize="20sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/text_item_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_placeholder"
        android:textColor="@color/primaryTextLight"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/text_item_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_placeholder"
        android:textColor="@color/primaryText"/>

</LinearLayout>