<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_item_date"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="7dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/date_placeholder"
        android:textColor="@color/secondaryColor"
        android:textSize="12sp"
        android:textStyle="italic" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/title_placeholder"
            android:textColor="@color/primaryTextDark"
            android:textSize="20sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/text_item_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/text_placeholder"
        android:textColor="@color/primaryText" />
</LinearLayout>