<?xml version="1.0" encoding="utf-8"?>


<LinearLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder"
            android:textColor="@color/primaryTextLight"
            android:textSize="12sp"
            android:textStyle="italic"
            android:gravity="right"
            android:id="@+id/image_item_date"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_placeholder"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="left"
            android:textSize="20sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_item_photo"
            android:src="@drawable/pick_example"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_placeholder" />
    </LinearLayout>
</LinearLayout>
