<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_item_photo"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/trip_photo_example" />

    </FrameLayout>

    <TextView
        android:id="@+id/image_item_date"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="7dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/date_placeholder"
        android:textColor="@color/secondaryColor"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="7dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/title_placeholder"
        android:textColor="@color/primaryTextDark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/image_item_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/text_placeholder"
        android:textColor="@color/primaryText" />

</LinearLayout>
