<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="mobile.frba.utn.tpmobile.fragments.CreateEditEventFragment"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textSize="20sp"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/title_placeholder"
        android:inputType="text"
        android:background="#00000000"/>

    <View
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="6dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/dateInput"
            android:layout_marginEnd="2dp"
            android:textSize="15sp"
            android:layout_marginStart="2dp"
            android:textColor="@color/primaryText" />

        <EditText
            android:id="@+id/event_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textSize="15sp"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/start_date_hint"
            android:focusable="false"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="3"
        android:gravity="bottom|start"
        android:hint="@string/eventDescriptionPlaceholder"
        android:scrollbars="vertical" />

    <android.support.v7.widget.CardView
        android:id="@+id/text_item_card_view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/trip_image"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@drawable/image_placeholder"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/load_photo_button"
            android:background="@drawable/icon_edit"
            android:backgroundTint="@color/colorAccent"
            android:layout_gravity="end"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/gradient" />

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        style="?android:attr/buttonBarStyle"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/accept_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@color/colorAccent"
            android:fontFamily="@font/raleway_medium"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/acceptButton"
            android:textColor="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="15sp" />

        <Button
            android:id="@+id/cancel_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@color/colorAccent"
            android:fontFamily="@font/raleway_medium"
            android:paddingEnd="28dp"
            android:paddingStart="28dp"
            android:text="@string/cancelButton"
            android:textColor="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="15sp" />

    </LinearLayout>
    
</LinearLayout>
